[package]
name = "premer"
version = "0.1.0"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.123", features = ["derive"] }

[dev-dependencies]
device_query = "0.2.7"